--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.zxy.aop"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -48,6 +48,17 @@ dependencies {
     implementation project(':annotation')
     implementation project(':apt-library')
     annotationProcessor project(':apt-processor')
+    implementation 'com.konka.mylibrary:ljmlibrary:1.0.0'
+}
+
+allprojects {
+    repositories {
+        maven{
+            url uri('../repo')
+        }
+        google()
+        jcenter()
+    }
 }
 
 apply plugin: AspectjPlugin
