--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,14 @@ buildscript {
     
     repositories {
         google()
+        mavenCentral()
         jcenter()
         maven{
             url uri('repo')
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:7.0.4'
 
 
 
@@ -27,6 +28,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
