--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'groovy'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 repositories {
     jcenter()
@@ -7,17 +7,78 @@ repositories {
 
 
 
-uploadArchives {
+//uploadArchives {
+//
+//    repositories.mavenDeployer {
+//        repository(url: uri('../repo'))
+//        pom.groupId = 'com.app.plugin'
+//        pom.artifactId = 'gradleplugin'
+//        pom.version = '1.0.0'
+//    }
+//
+//
+//
+//}
 
-    repositories.mavenDeployer {
-        repository(url: uri('../repo'))
-        pom.groupId = 'com.app.plugin'
-        pom.artifactId = 'gradleplugin'
-        pom.version = '1.0.0'
+publishing {
+    repositories {
+        maven {
+            url = '../repo'
+        }
     }
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.app.plugin'
+            artifactId = 'gradleplugin'
+            version = '1.0.0'
+            artifact "build/libs/plugin.jar"
+            //带上依赖 ，否则会报错
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
 
+                def scopes = [configurations.implementation]
+                if (configurations.hasProperty("api")) {
+                    scopes.add(configurations.api)
+                }
+                if (configurations.hasProperty("implementation")) {
+                    scopes.add(configurations.implementation)
+                }
+                if (configurations.hasProperty("debugImplementation")) {
+                    scopes.add(configurations.debugImplementation)
+                }
+                if (configurations.hasProperty("releaseImplementation")) {
+                    scopes.add(configurations.releaseImplementation)
+                }
 
+//                    if (project.ext.targetType != "jar") {
+//                        scopes.add(configurations.provided)
+//                    }
+                scopes.each { scope ->
+                    scope.allDependencies.each {
+                        if (it instanceof ModuleDependency) {
+                            boolean isTransitive = ((ModuleDependency) it).transitive
+                            if (!isTransitive) {
+                                println "<<<< not transitive dependency: [${it.group}, ${it.name}, ${it.version}]"
+                                return
+                            }
+                        }
 
+                        if (it.group == "${project.rootProject.name}.libs" || it.version == 'unspecified') {
+                            return
+                        }
+
+                        if (it.group && it.name && it.version) {
+                            def dependencyNode = dependenciesNode.appendNode('dependency')
+                            dependencyNode.appendNode('groupId', it.group)
+                            dependencyNode.appendNode('artifactId', it.name)
+                            dependencyNode.appendNode('version', it.version)
+                            dependencyNode.appendNode('scope', scope.name)
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 
